# spotify_intelligence

./: .gitignore  README.md  pyproject.toml  requirements.txt
runners/prepare/spotify/: runner.json
runners/raw/spotify/: runner.json
src/spotify_intelligence/: MainLauncher.py
src/spotify_intelligence/Utils/: __init__.py  general_utils.py  logging_utils.py  utils.py
src/spotify_intelligence/bronze_layer/: RawData.py  Spotify.py  get_raws
src/spotify_intelligence/bronze_layer/business/: Spotify.py
src/spotify_intelligence/bronze_layer/generics/: RawData.py
src/spotify_intelligence/silver_layer/: PrepareData.py  RawFactory.py  RawSource.py  SilverRawTable.py  SilverRules.py  Spotify.py  SpotifyTables.py
src/spotify_intelligence/silver_layer/business/: Spotify.py  SpotifyTables.py
src/spotify_intelligence/silver_layer/generics/: PrepareData.py  RawFactory.py  RawSource.py  SilverRawTable.py  TableTracker.py
