[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-intelligence"
description = "ETL pipeline to extract, transform, and load Spotify data for analysis and insights."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version", "dependencies"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }
